# ML-ops-Task

./: .gitignore  BUILD_SUMMARY_v0.3.0.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  INTEGRATION_FEATURES.md  MONITORING_SETUP.md  README.md  REQUIREMENTS_COMPARISON.md  docker-compose.yml  load_docs.py  main.py  mlops.xlsx  pyproject.toml
.github/workflows/: mlops-deploy.yml
agentic_mlops/: __init__.py  api.py  auth.py  cli.py  config.py  drift_detector.py  dvc_manager.py  executor.py  grafana_dashboards.py  kserve_integration.py  kubeflow_integration.py  mlflow_tracker.py  planner.py  prometheus_metrics.py  schemas.py  skills.py
agentic_mlops_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/: app.py  app_secure.py  rag.py  rohit_agent.py
frontend/: app.py
knowledge/: crewai.md  dvc.md  fastapi.md  github_actions.md  kserve.md  kubeflow.md  langchain.md  mlflow.md
mlruns/0/: meta.yaml
mlruns/287087752263583524/: meta.yaml
mlruns/526399896078371987/: meta.yaml
mlruns/526399896078371987/2768b43de7e84c36bc708c24eef266cb/: meta.yaml
mlruns/526399896078371987/2768b43de7e84c36bc708c24eef266cb/metrics/: accuracy  covariate_drift_score  drift_detected  n_features  n_samples
mlruns/526399896078371987/2768b43de7e84c36bc708c24eef266cb/tags/: mlflow.source.name
mlruns/526399896078371987/2d9ce85d772d431b97e37b256728a55a/: meta.yaml
mlruns/526399896078371987/2d9ce85d772d431b97e37b256728a55a/tags/: mlflow.runName
mlruns/526399896078371987/b1ce70b7956042cc852df146f4409c1f/: meta.yaml
mlruns/526399896078371987/b1ce70b7956042cc852df146f4409c1f/metrics/: accuracy  covariate_drift_score  drift_detected  n_features  n_samples
mlruns/526399896078371987/ccca0178d10844b2ae964b0ae77fc13e/: meta.yaml
mlruns/526399896078371987/ccca0178d10844b2ae964b0ae77fc13e/tags/: objective
mlruns/526399896078371987/models/m-080d2ea62db34b4cac0f47a138fbd99c/: meta.yaml
tests/: test_agentic_flow.py  test_backend.py  test_integrations.py  test_monitoring_integration.py
(+9 files in other folders)
